--- a/doc/source/ray-air/examples/BUILD
+++ b/doc/source/ray-air/examples/BUILD
@@ -42,10 +42,7 @@ py_test_run_all_notebooks(
 
 py_test_run_all_notebooks(
     size = "large",
-    include = [
-        "huggingface_text_classification.ipynb",
-        "torch_incremental_learning.ipynb",
-    ],
+    include = ["huggingface_text_classification.ipynb"],
     exclude = [],
     data = ["//doc/source/ray-air/examples:air_examples"],
     tags = ["exclusive", "team:ml", "gpu", "ray_air"],
