--- a/release/release_tests.yaml
+++ b/release/release_tests.yaml
@@ -2662,7 +2662,7 @@
 
   cluster:
     cluster_env: app_config.yaml
-    cluster_compute: 1gpus_24cpus.yaml
+    cluster_compute: 1gpu_24cpus.yaml
 
   run:
     timeout: 18000
