--- a/doc/source/data/examples/BUILD
+++ b/doc/source/data/examples/BUILD
@@ -14,7 +14,7 @@ filegroup(
 # and a need of a general overhaul.
 
 py_test_run_all_notebooks(
-    size = "medium",
+    size = "large",
     include = ["*.ipynb"],
     exclude = [
         "big_data_ingestion.ipynb",
