--- a/doc/source/tune/examples/BUILD
+++ b/doc/source/tune/examples/BUILD
@@ -19,6 +19,7 @@ py_test_run_all_notebooks(
     exclude = [
         "pbt_ppo_example.ipynb",
         "tune-xgboost.ipynb",
+        "sigopt_example.ipynb", # REGRESSION: no credentials
     ],
     data = ["//doc/source/tune/examples:tune_examples"],
     tags = ["exclusive", "team:ml"],
