move random access
Signed-off-by: Eric Liang <ekhliang@gmail.com>

--- a/doc/source/_toc.yml
+++ b/doc/source/_toc.yml
@@ -58,6 +58,7 @@ parts:
               - file: data/examples/ocr_example
                 title: Scaling OCR with Ray Datasets
               - file: data/advanced-pipelines
+              - file: data/random-access
           - file: data/faq
           - file: data/package-ref
           - file: data/integrations
