--- a/release/rllib_tests/learning_tests/yaml_files/marwil/marwil-halfcheetahbulletenv-v0.yaml
+++ b/release/rllib_tests/learning_tests/yaml_files/marwil/marwil-halfcheetahbulletenv-v0.yaml
@@ -1,15 +1,18 @@
 marwil-halfcheetahbulletenv-v0:
     env: HalfCheetahBulletEnv-v0
     run: MARWIL
-    pass_criteria:
-        evaluation/episode_reward_mean: 400.0
-        # Can not check throughput for offline methods.
-        # timesteps_total: 10000000
+    # pass_criteria:
     stop:
-        time_total_s: 3600
+        evaluation/episode_reward_mean: 400.0
+        Can not check throughput for offline methods.
+        timesteps_total: 10000000
+        time_total_s: 7200
     config:
         # Use input produced by expert SAC algo.
-        input: ["~/halfcheetah_expert_sac.zip"]
+        input: "dataset"
+        input_config:
+            format: "json"
+            paths: "/home/ray/halfcheetah_expert_sac.zip"
         actions_in_input_normalized: true
         # Switch off input evaluation (data does not contain action probs).
         off_policy_estimation_methods: {}
@@ -19,7 +22,7 @@ marwil-halfcheetahbulletenv-v0:
         model:
             fcnet_activation: relu
             fcnet_hiddens: [256, 256, 256]
-
+        num_workers: 8
         evaluation_num_workers: 1
         evaluation_parallel_to_training: true
         evaluation_interval: 3
@@ -27,3 +30,6 @@ marwil-halfcheetahbulletenv-v0:
             input: sampler
             off_policy_estimation_methods: null
         always_attach_evaluation_results: True
+        grad_clip: 40
+        lr: 0.001
+
