--- a/release/release_tests.yaml
+++ b/release/release_tests.yaml
@@ -2713,7 +2713,7 @@
 
   cluster:
     cluster_env: app_config.yaml
-    cluster_compute: 2gpus_32cpus.yaml
+    cluster_compute: appo_1gpu_32cpus.yaml
 
   run:
     timeout: 18000
