revert changes to nyc taxi

--- a/doc/source/data/examples/BUILD
+++ b/doc/source/data/examples/BUILD
@@ -21,5 +21,6 @@ py_test_run_all_notebooks(
         "nyc_taxi_basic_processing.ipynb", # REGRESSION
     ],
     data = ["//doc/source/data/examples:data_examples"],
-    tags = ["exclusive", "team:ml"]
+    tags = ["exclusive", "team:ml"],
+    allow_empty = True  # REGRESSION
 )
