--- a/release/rllib_tests/learning_tests/yaml_files/apex/apex-breakoutnoframeskip-v4.yaml
+++ b/release/rllib_tests/learning_tests/yaml_files/apex/apex-breakoutnoframeskip-v4.yaml
@@ -5,6 +5,7 @@ apex-breakoutnoframeskip-v4:
     pass_criteria:
         episode_reward_mean: 100.0
         timesteps_total: 12000000
+    stop:
         time_total_s: 7200
     config:
         double_q: false
