initial working commit

--- a/doc/source/data/examples/BUILD
+++ b/doc/source/data/examples/BUILD
@@ -18,9 +18,7 @@ py_test_run_all_notebooks(
     include = ["*.ipynb"],
     exclude = [
         "big_data_ingestion.ipynb",
-        "nyc_taxi_basic_processing.ipynb", # REGRESSION
     ],
     data = ["//doc/source/data/examples:data_examples"],
-    tags = ["exclusive", "team:ml"],
-    allow_empty = True  # REGRESSION
+    tags = ["exclusive", "team:ml"]
 )
