--- a/release/rllib_tests/learning_tests/yaml_files/appo/appo-pongnoframeskip-v4.yaml
+++ b/release/rllib_tests/learning_tests/yaml_files/appo/appo-pongnoframeskip-v4.yaml
@@ -1,6 +1,7 @@
 appo-pongnoframeskip-v4:
     env: PongNoFrameskip-v4
     run: APPO
+    frameworks: [ "torch" ]
     # Minimum reward and total ts (in given time_total_s) to pass this test.
     pass_criteria:
         episode_reward_mean: 18.0
