--- a/python/requirements/ml/requirements_dl.txt
+++ b/python/requirements/ml/requirements_dl.txt
@@ -1,11 +1,11 @@
 # These requirements are used for the CI and CPU-only Docker images so we install CPU only versions of torch.
 # For GPU Docker images, you should install requirements_ml_docker.txt afterwards.
 
-tensorflow==2.6.2;sys_platform=="darwin"
-tensorflow-probability==0.14.1;sys_platform=="darwin"
+tensorflow==2.6.2; python_version < '3.7'
+tensorflow-probability==0.14.1; python_version < '3.7'
 
-tensorflow==2.9.1;sys_platform!="darwin"
-tensorflow-probability==0.16.0;sys_platform!="darwin"
+tensorflow==2.9.1; python_version >= '3.7'
+tensorflow-probability==0.16.0; python_version >= '3.7'
 
 # If you make changes to the torch versions below, please also make the corresponding changes to `requirements_ml_docker.txt`!
 
