--- a/release/release_tests.yaml
+++ b/release/release_tests.yaml
@@ -4285,3 +4285,26 @@
       num_nodes: 20
     type: sdk_command
     file_manager: sdk
+
+- name: k8s_serve_ha_test
+  group: k8s-test
+  working_dir: k8s_tests
+  legacy:
+    test_name: k8s_serve_ha_test
+    test_suite: k8s_tests
+
+  stable: false
+
+  frequency: nightly
+  team: serve
+  cluster:
+    cluster_env: app_config.yaml
+    cluster_compute: compute_tpl.yaml
+
+  run:
+    timeout: 7200
+    prepare: 'echo hi'
+    script: python run_gcs_ft_on_k8s.py
+    type: sdk_command
+    file_manager: sdk
+
