--- a/rllib/tuned_examples/pg/cartpole-crashing-pg.yaml
+++ b/rllib/tuned_examples/pg/cartpole-crashing-pg.yaml
@@ -24,6 +24,11 @@ cartpole-crashing-pg:
         # Switch on resiliency for failed sub environments (within a vectorized stack).
         restart_failed_sub_environments: true
 
+        # Disable env checking. Otherwise, RolloutWorkers will crash during
+        # initialization, which is not covered by the
+        # `restart_failed_sub_environments=True` failure tolerance mode.
+        disable_env_checking: true
+
         evaluation_num_workers: 2
         evaluation_interval: 1
         evaluation_duration: 20
@@ -31,3 +36,8 @@ cartpole-crashing-pg:
         evaluation_parallel_to_training: true
         evaluation_config:
           explore: false
+          # Let's make eval environments stable.
+          # This is to prove that we can still learn a crashing env.
+          p_crash: 0.0
+          p_crash_reset: 0.0
+          init_time_s: 0.0
