--- a/rllib/tuned_examples/pg/multi-agent-cartpole-crashing-pg.yaml
+++ b/rllib/tuned_examples/pg/multi-agent-cartpole-crashing-pg.yaml
@@ -36,4 +36,9 @@ multi-agent-cartpole-crashing-pg:
         evaluation_duration_unit: episodes
         evaluation_parallel_to_training: true
         evaluation_config:
-          explore: false
+            explore: false
+            # Let's make eval environments stable.
+            # This is to prove that we can still learn a crashing env.
+            p_crash: 0.0
+            p_crash_reset: 0.0
+            init_time_s: 0.0
