--- a/rllib/tuned_examples/pg/multi-agent-cartpole-crashing-with-remote-envs-pg.yaml
+++ b/rllib/tuned_examples/pg/multi-agent-cartpole-crashing-with-remote-envs-pg.yaml
@@ -33,10 +33,15 @@ multi-agent-cartpole-crashing-pg:
         # `restart_failed_sub_environments=True` failure tolerance mode.
         disable_env_checking: true
 
-        evaluation_num_workers: 1
+        evaluation_num_workers: 2
         evaluation_interval: 1
-        evaluation_duration: 10
+        evaluation_duration: 20
         evaluation_duration_unit: episodes
         evaluation_parallel_to_training: true
         evaluation_config:
-          explore: false
+            explore: false
+            # Let's make eval environments stable.
+            # This is to prove that we can still learn a crashing env.
+            p_crash: 0.0
+            p_crash_reset: 0.0
+            init_time_s: 0.0
