--- a/doc/source/_toc.yml
+++ b/doc/source/_toc.yml
@@ -268,5 +268,6 @@ parts:
       - file: ray-core/configure
       - file: ray-observability/index
       - file: ray-contribute/whitepaper
+      - file: ray-contribute/security
 
 # TODO: Add examples section
