--- a/.buildkite/pipeline.ml.yml
+++ b/.buildkite/pipeline.ml.yml
@@ -375,8 +375,11 @@
     ["RAY_CI_PYTHON_AFFECTED", "RAY_CI_TUNE_AFFECTED", "RAY_CI_DOC_AFFECTED", "RAY_CI_SERVE_AFFECTED", "RAY_CI_ML_AFFECTED"]
   commands:
     - cleanup() { if [ "${BUILDKITE_PULL_REQUEST}" = "false" ]; then ./ci/build/upload_build_info.sh; fi }; trap cleanup EXIT
+    - export LINT=1
     - DOC_TESTING=1 INSTALL_HOROVOD=1 PYTHON=3.7 ./ci/env/install-dependencies.sh
-    - python -m doctest -v python/ray/train/**/*.py
+    - ./ci/ci.sh lint
+    - ./ci/ci.sh build
+    - ./ci/ci.sh doctest_sphinx_docs
 
 - label: ":book: Doc tests and examples (excluding Ray AIR examples)"
   conditions:
