--- a/rllib/tuned_examples/pg/cartpole-crashing-with-remote-envs-pg.yaml
+++ b/rllib/tuned_examples/pg/cartpole-crashing-with-remote-envs-pg.yaml
@@ -2,7 +2,7 @@ cartpole-crashing-with-remote-envs-pg:
     env: ray.rllib.examples.env.cartpole_crashing.CartPoleCrashing
     run: PG
     stop:
-        episode_reward_mean: 35.0
+        evaluation/episode_reward_mean: 35.0
         timesteps_total: 25000
     config:
         # Works for both torch and tf.
@@ -24,3 +24,19 @@ cartpole-crashing-with-remote-envs-pg:
 
         # Switch on resiliency for failed sub environments (within a vectorized stack).
         restart_failed_sub_environments: true
+
+        evaluation_num_workers: 2
+        evaluation_interval: 1
+        evaluation_duration: 20
+        evaluation_duration_unit: episodes
+        evaluation_parallel_to_training: true
+        evaluation_config:
+            explore: false
+            env_config:
+                config:
+                    # Make eval workers solid.
+                    # This test is to prove that we can learn with crashing env,
+                    # not eval with crashing env.
+                    p_crash: 0.0
+                    p_crash_reset: 0.0
+                    init_time_s: 0.0
