--- a/rllib/tuned_examples/pg/multi-agent-cartpole-crashing-with-remote-envs-pg.yaml
+++ b/rllib/tuned_examples/pg/multi-agent-cartpole-crashing-with-remote-envs-pg.yaml
@@ -2,7 +2,7 @@ multi-agent-cartpole-crashing-pg:
     env: ray.rllib.examples.env.cartpole_crashing.MultiAgentCartPoleCrashing
     run: PG
     stop:
-        evaluation/episode_reward_mean: 320.0
+        evaluation/episode_reward_mean: 300.0
         num_env_steps_sampled: 300000
     config:
         # Works for both torch and tf.
@@ -34,4 +34,12 @@ multi-agent-cartpole-crashing-pg:
         evaluation_duration_unit: episodes
         evaluation_parallel_to_training: true
         evaluation_config:
-          explore: false
+            explore: false
+            env_config:
+                config:
+                    # Make eval workers solid.
+                    # This test is to prove that we can learn with crashing env,
+                    # not eval with crashing env.
+                    p_crash: 0.0
+                    p_crash_reset: 0.0
+                    init_time_s: 0.0
