--- a/rllib/tuned_examples/pg/cartpole-crashing-with-remote-envs-pg.yaml
+++ b/rllib/tuned_examples/pg/cartpole-crashing-with-remote-envs-pg.yaml
@@ -22,6 +22,10 @@ cartpole-crashing-with-remote-envs-pg:
         # Use parallel remote envs.
         remote_worker_envs: true
 
+        # Disable env checking. Env checker doesn't handle Exceptions from
+        # user envs, and will crash rollout worker.
+        disable_env_checking: true
+
         # Switch on resiliency for failed sub environments (within a vectorized stack).
         restart_failed_sub_environments: true
 
