--- a/.buildkite/pipeline.ml.yml
+++ b/.buildkite/pipeline.ml.yml
@@ -311,6 +311,14 @@
     - TRAIN_TESTING=1 TUNE_TESTING=1 ./ci/env/install-dependencies.sh
     - bazel test --config=ci $(./ci/run/bazel_export_options) --build_tests_only --test_tag_filters=tune,-gpu_only,-ray_air python/ray/train/...
 
+- label: ":steam_locomotive: :whale: Jax Train + Tune tests and examples. Python 3.7"
+  conditions: ["RAY_CI_TRAIN_AFFECTED"]
+  commands:
+    - cleanup() { if [ "${BUILDKITE_PULL_REQUEST}" = "false" ]; then ./ci/build/upload_build_info.sh; fi }; trap cleanup EXIT
+    - TRAIN_TESTING=1 PYTHON=3.7 TUNE_TESTING=1 ./ci/env/install-dependencies.sh
+    - pip install -Ur ./python/ml/requirements_jax.txt
+    - ./ci/env/env_info.sh
+
 - label: ":octopus: Tune tests and examples. Python 3.7"
   conditions: ["RAY_CI_TUNE_AFFECTED"]
   commands:
