--- a/python/requirements/ml/requirements_jax_gpu.txt
+++ b/python/requirements/ml/requirements_jax_gpu.txt
@@ -1,6 +1,9 @@
 tensorflow==2.9.1; python_version >= '3.7'
 tensorflow-probability==0.16.0; python_version >= '3.7'
 tensorflow_estimator==2.9.0; python_version >= '3.7'
+flax==0.5.3
+einops==0.4.1
+tensorflow_datasets==4.6.0
 
 # Jax
 -f https://storage.googleapis.com/jax-releases/jax_cuda_releases.html
